fix style for dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,29 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer base {
+  :root {
+    --color-text-base:#49C0C6;
+    --color-text-inverted:#444444;
+    --color-text-white:#ffffff;
+    --color-text-muted:#c7d2fe;
+    --color-fill:#49C0C6;
+    --color-dark:#000000;
+    --color-bgdark:#111827;
+    --color-button-accent:#ffffff;
+    --color-button-accent-hover:#eef2ff;
+    --color-button-muted:#49C0C6;
+    --color-darkmode:#111827;
+  }
+}
+
+/* Toggle B */
+input:checked ~ .dot {
+  transform: translateX(100%);
+  background-color: #48bb78;
+}
+
+.img-sepia {
+  filter: sepia(1);
+}
